<resources>
    <string name="app_name">Calculator</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiplication">×</string>
    <string name="subtraction">÷</string>
    <string name="clear">CLEAR</string>
    <string name="activity">ACTIVITY</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="menu_about">About</string>
    <string name="menu_versions">Versions</string>
    <string name="menu_settings">Settings</string>
    <string name="drawer_menu">menu to open drawer</string>
    <string name="arrow_button">button on calculator to remove screen content</string>
</resources>