<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_background_screen">

        <TextView
            android:id="@+id/secondaryScreen"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:autoSizeMaxTextSize="@dimen/secondary_screen_size"
            android:autoSizeTextType="uniform"
            android:gravity="end|center"
            android:hint=""
            android:text=""
            android:textColor="#6E6E6E"
            android:textColorHint="#2C2B2B"
            android:textSize="@dimen/secondary_screen_size"
            app:layout_constraintBottom_toTopOf="@+id/mainScreen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/mainScreen"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:autoSizeMaxTextSize="@dimen/main_screen_size"
            android:autoSizeMinTextSize="@dimen/secondary_screen_size"
            android:autoSizeTextType="uniform"
            android:gravity="end|center"
            android:hint="@string/_0"
            android:importantForAutofill="no"
            android:inputType="none"
            android:text=""
            android:textColor="#151515"
            android:textColorHint="#1C1B1B"
            android:textSize="@dimen/main_screen_size"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondaryScreen"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:outlineAmbientShadowColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainScreen">

            <Button
                android:id="@+id/button0"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/buttonColor"
                android:text="@string/_0"
                android:textColor="@color/textColor"
                android:textSize="@dimen/button_numbers_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/dotButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button1"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/buttonColor"
                android:text="@string/_1"
                android:textColor="@color/textColor"
                android:textSize="@dimen/button_numbers_size"
                app:layout_constraintBottom_toTopOf="@+id/button0"
                app:layout_constraintEnd_toStartOf="@+id/button2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button4" />

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/buttonColor"
                android:text="@string/_4"
                android:textColor="@color/textColor"
                android:textSize="@dimen/button_numbers_size"
                app:layout_constraintBottom_toTopOf="@+id/button1"
                app:layout_constraintEnd_toStartOf="@+id/button5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button7" />

            <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/buttonColor"
                android:text="@string/_7"
                android:textColor="@color/textColor"
                android:textSize="@dimen/button_numbers_size"
                app:layout_constraintBottom_toTopOf="@+id/button4"
                app:layout_constraintEnd_toStartOf="@+id/button8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/dotButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/buttonColorSymbol"
                android:text="@string/dot"
                android:textColor="@color/textColor"
                android:textSize="@dimen/button_symbol_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/equalButton"
                app:layout_constraintStart_toEndOf="@+id/button0"
                app:layout_constraintTop_toBottomOf="@+id/button2" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/buttonColor"
                android:text="@string/_2"
                android:textColor="@color/textColor"
                android:textSize="@dimen/button_numbers_size"
                app:layout_constraintBottom_toTopOf="@+id/dotButton"
                app:layout_constraintEnd_toStartOf="@+id/button3"
                app:layout_constraintStart_toEndOf="@+id/button1"
                app:layout_constraintTop_toBottomOf="@+id/button5" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/buttonColor"
                android:text="@string/_5"
                android:textColor="@color/textColor"
                android:textSize="@dimen/button_numbers_size"
                app:layout_constraintBottom_toTopOf="@+id/button2"
                app:layout_constraintEnd_toStartOf="@+id/button6"
                app:layout_constraintStart_toEndOf="@+id/button4"
                app:layout_constraintTop_toBottomOf="@+id/button8" />

            <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/buttonColor"
                android:text="@string/_8"
                android:textColor="@color/textColor"
                android:textSize="@dimen/button_numbers_size"
                app:layout_constraintBottom_toTopOf="@+id/button5"
                app:layout_constraintEnd_toStartOf="@+id/button9"
                app:layout_constraintStart_toEndOf="@+id/button7"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/equalButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/buttonColorSymbol"
                android:text="@string/equal"
                android:textColor="@color/textColor"
                android:textSize="@dimen/button_symbol_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/addButton"
                app:layout_constraintStart_toEndOf="@+id/dotButton"
                app:layout_constraintTop_toBottomOf="@+id/button3" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/buttonColor"
                android:text="@string/_3"
                android:textColor="@color/textColor"
                android:textSize="@dimen/button_numbers_size"
                app:layout_constraintBottom_toTopOf="@+id/equalButton"
                app:layout_constraintEnd_toEndOf="@+id/equalButton"
                app:layout_constraintStart_toEndOf="@+id/button2"
                app:layout_constraintTop_toBottomOf="@+id/button6" />

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/buttonColor"
                android:text="@string/_6"
                android:textColor="@color/textColor"
                android:textSize="@dimen/button_numbers_size"
                app:layout_constraintBottom_toTopOf="@+id/button3"
                app:layout_constraintEnd_toEndOf="@+id/button3"
                app:layout_constraintStart_toEndOf="@+id/button5"
                app:layout_constraintTop_toBottomOf="@+id/button9" />

            <Button
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/buttonColor"
                android:text="@string/_9"
                android:textColor="@color/textColor"
                android:textSize="@dimen/button_numbers_size"
                app:layout_constraintBottom_toTopOf="@+id/button6"
                app:layout_constraintEnd_toEndOf="@+id/button6"
                app:layout_constraintStart_toEndOf="@+id/button8"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/addButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="1dp"
                android:background="@color/buttonColorSymbol"
                android:text="@string/plus"
                android:textColor="@color/textColor"
                android:textSize="@dimen/button_symbol_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/equalButton"
                app:layout_constraintTop_toBottomOf="@+id/subtractButton" />

            <Button
                android:id="@+id/subtractButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/buttonColorSymbol"
                android:text="@string/minus"
                android:textColor="@color/textColor"
                android:textSize="@dimen/button_symbol_size"
                app:layout_constraintBottom_toTopOf="@+id/addButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/addButton"
                app:layout_constraintTop_toBottomOf="@+id/multiplyButton" />

            <Button
                android:id="@+id/multiplyButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/buttonColorSymbol"
                android:text="@string/multiplication"
                android:textColor="@color/textColor"
                android:textSize="@dimen/button_symbol_size"
                app:layout_constraintBottom_toTopOf="@+id/subtractButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/subtractButton"
                app:layout_constraintTop_toBottomOf="@+id/divideButton" />

            <Button
                android:id="@+id/divideButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/buttonColorSymbol"
                android:text="@string/subtraction"
                android:textColor="@color/textColor"
                android:textSize="@dimen/button_symbol_size"
                app:layout_constraintBottom_toTopOf="@+id/multiplyButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/multiplyButton"
                app:layout_constraintTop_toBottomOf="@+id/clearButton" />

            <ImageButton
                android:id="@+id/clearButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/buttonColorSymbol"
                android:contentDescription="@string/arrow_button"
                android:src="@drawable/ic_arrow"
                app:layout_constraintBottom_toTopOf="@+id/divideButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/divideButton"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    side hidden navigation
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="205dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:paddingHorizontal="50dp"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />
    -->

</androidx.drawerlayout.widget.DrawerLayout>